refactor code and design from eventmanage -> stock manage
